// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderKeys highlights flat black keys from left to right 1`] = `
"<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"0\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"23\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"46\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"69\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"92\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"115\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"138\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"161\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"184\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"207\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"230\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"253\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"276\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"299\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#a0c6e8;stroke:black\\" x=\\"14.33333\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#a0c6e8;stroke:black\\" x=\\"41.66666\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#a0c6e8;stroke:black\\" x=\\"82.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"108.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"134.75\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"175.33333\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"202.66666\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"243.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"269.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"295.75\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
"
`;

exports[`renderKeys highlights sharp black keys from left to right 1`] = `
"<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"0\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"23\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"46\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"69\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"92\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"115\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"138\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"161\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"184\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"207\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"230\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"253\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"276\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"299\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#a0c6e8;stroke:black\\" x=\\"14.33333\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#a0c6e8;stroke:black\\" x=\\"41.66666\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#a0c6e8;stroke:black\\" x=\\"82.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"108.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"134.75\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"175.33333\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"202.66666\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"243.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"269.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"295.75\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
"
`;

exports[`renderKeys highlights specific white keys from left to right 1`] = `
"<rect style=\\"fill:#a0c6e8;stroke:black\\" x=\\"0\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"23\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#a0c6e8;stroke:black\\" x=\\"46\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"69\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#a0c6e8;stroke:black\\" x=\\"92\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"115\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"138\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#a0c6e8;stroke:black\\" x=\\"161\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"184\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"207\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"230\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"253\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"276\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"299\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"14.33333\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"41.66666\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"82.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"108.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"134.75\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"175.33333\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"202.66666\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"243.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"269.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"295.75\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
"
`;

exports[`renderKeys renders keys with the correct layout format 1`] = `
"<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"0\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"23\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"46\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"69\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"92\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"115\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"138\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"161\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"184\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"207\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"230\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"253\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"276\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"299\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"14.33333\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"41.66666\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"82.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"108.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"134.75\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"175.33333\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"202.66666\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"243.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"269.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"295.75\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
"
`;

exports[`renderKeys renders keys with the correct layout format 2`] = `
"<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"0\\" y=\\"0\\" width=\\"23\\" height=\\"120\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"23\\" y=\\"0\\" width=\\"23\\" height=\\"120\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"46\\" y=\\"0\\" width=\\"23\\" height=\\"120\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"69\\" y=\\"0\\" width=\\"23\\" height=\\"120\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"92\\" y=\\"0\\" width=\\"23\\" height=\\"120\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"115\\" y=\\"0\\" width=\\"23\\" height=\\"120\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"138\\" y=\\"0\\" width=\\"23\\" height=\\"120\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"161\\" y=\\"0\\" width=\\"23\\" height=\\"120\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"184\\" y=\\"0\\" width=\\"23\\" height=\\"120\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"207\\" y=\\"0\\" width=\\"23\\" height=\\"120\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"230\\" y=\\"0\\" width=\\"23\\" height=\\"120\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"253\\" y=\\"0\\" width=\\"23\\" height=\\"120\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"276\\" y=\\"0\\" width=\\"23\\" height=\\"120\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"299\\" y=\\"0\\" width=\\"23\\" height=\\"120\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"14.33333\\" y=\\"0\\" width=\\"13\\" height=\\"80\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"41.66666\\" y=\\"0\\" width=\\"13\\" height=\\"80\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"82.25\\" y=\\"0\\" width=\\"13\\" height=\\"80\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"108.25\\" y=\\"0\\" width=\\"13\\" height=\\"80\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"134.75\\" y=\\"0\\" width=\\"13\\" height=\\"80\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"175.33333\\" y=\\"0\\" width=\\"13\\" height=\\"80\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"202.66666\\" y=\\"0\\" width=\\"13\\" height=\\"80\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"243.25\\" y=\\"0\\" width=\\"13\\" height=\\"80\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"269.25\\" y=\\"0\\" width=\\"13\\" height=\\"80\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"295.75\\" y=\\"0\\" width=\\"13\\" height=\\"80\\" ry=\\"1\\"></rect>
"
`;

exports[`renderKeys supports custom size 1`] = `
"<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"0\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"23\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"46\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"69\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#fafafa;stroke:black\\" x=\\"92\\" y=\\"0\\" width=\\"23\\" height=\\"65\\" ry=\\"3\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"14.33333\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"41.66666\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"82.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
<rect style=\\"fill:#222222;stroke:black\\" x=\\"108.25\\" y=\\"0\\" width=\\"13\\" height=\\"40\\" ry=\\"1\\"></rect>
"
`;
